--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   cached_network_image: ^3.4.1
   flutter_svg: ^2.1.0
+  freezed: ^3.0.6
+  flutter_bloc: ^9.1.1
+  bloc: ^9.0.0
+  provider: ^6.1.5
+  path_provider: ^2.1.5
+  freezed_annotation: ^3.0.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
